--- a/style.css
+++ b/style.css
@@ -111,3 +111,22 @@ span
 {
     left:45%;
 }
+
+.footer
+{
+    background:#212121;
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    color:white;
+    text-align: center;
+    line-height:50px;
+    height:50px;
+}
+
+span2
+{
+    color:#eff4fd;
+
+}
