--- a/style.css
+++ b/style.css
@@ -115,6 +115,9 @@ span
 .footer
 {
     background:#212121;
-    
+    text-align: center;
+    color:#eff4fd;
+    line-height: 50px;
+    height:50px;
 }
 
