--- a/copycss.css
+++ b/copycss.css
@@ -10,13 +10,15 @@
     width:100%;
     height:100vh;
     background: #eff4fd;
+    
+    
 }
 
 nav
 {
     display:flex;
     width:84%;
-    margin:auto;
+    margin:0px 10px 10px 170px;
     padding: 5px 0;
     align-items: center;
     justify-content: space-between;
@@ -45,7 +47,7 @@ nav ul li a
 nav ul li a:hover
 {
     color:blueviolet;
-    text-decoration: underline;
+    text-decoration: underline ;
 }
 
 .detel
@@ -105,12 +107,14 @@ span
 
 .images:hover .shape
 {
-    bottom: 40px;
+    top: 40px;
+    right: 30px;
 }
 
 .images:hover .man
 {
     left:45%;
+    bottom: 30px;
 }
 
 .footer
@@ -121,4 +125,5 @@ span
     line-height: 50px; 
     height:50px;
 }
+
 
